--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.ufu.lsi</groupId>
-	<artifactId>gephi-stream</artifactId>
+	<artifactId>evolving-graph-stream</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Gephi Stream</name>
 
